vcs/specs/parser/fail/lexer/invalid_unicode_escape.vr
// @test: parse-fail
// @level: L0
// @tags: parser, lexer, strings, unicode, error
// @description: Test invalid unicode escape sequence detection
// @expected-error: E002

fn test_invalid_unicode() {
    let s1 = "\u{GGGGGG}";
    let s2 = "\u{110000}";
}
